refactored css externally

--- a/WebContent/resources/signupstyle.css
+++ b/WebContent/resources/signupstyle.css
@@ -11,3 +11,80 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;      
 }
+
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,700);
+
+
+
+body{background:#59ABE3;
+	margin:0
+}
+
+.form{width:340px;
+	height:440px;
+	background:#e6e6e6;
+	border-radius:8px;
+	box-shadow:0 0 40px -10px #000;
+	margin:calc(50vh - 220px) auto;
+	padding:20px 30px;
+	max-width:calc(100vw - 40px);
+	box-sizing:border-box;
+	font-family:'Montserrat',sans-serif;
+	position:relative}
+
+.title{margin:10px 0;
+	padding-bottom:10px;
+	width:180px;color:#78788c;
+	left: 60px;
+	border-bottom:3px solid #78788c}
+
+input{width:30%;
+	padding:10px;
+	box-sizing:border-box;
+	background:none;
+	outline:none;
+	resize:none;
+	border:0;
+	font-family:'Montserrat',sans-serif;
+	transition:all .3s;
+	border-bottom:2px solid #bebed2;}
+
+input:focus{border-bottom:2px solid #78788c}
+
+#mydiv{content:'Hi';
+	bottom:-380px;
+	background:#50505a;
+	right: -500px;
+	color:#fff;
+	width:60%;
+	padding:16px 4px 16px 0;
+	border-radius:6px;
+	font-size:13px;
+	box-shadow:10px 10px 40px -14px #000}
+
+#mydiv2{content:'Hi';
+	bottom:-380px;
+	right: -400px;
+	background:#50505a;
+	color:#fff;
+	width:25%;
+	padding:16px 4px 16px 0;
+	border-radius:6px;
+	font-size:13px;
+	box-shadow:10px 10px 40px -14px #000}
+
+span{margin:0 5px 0 15px}
+
+.Absolute-Center {
+  margin: auto;
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 15;
+  border: 3px solid #73AD21;
+}
+
+.Top-Left {
+   position: relative;
+    left: 60px;
+    top: 60px;
+    border: 3px solid #73AD21;
+  }
