--- a/WebContent/resources/matches2style.css
+++ b/WebContent/resources/matches2style.css
@@ -1,3 +1,14 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.row{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
 
 body{
 background: #59ABE3;
@@ -7,7 +18,9 @@ background: #59ABE3;
 
 .container{
     width: 100%; 
-    height: 100%; 
+    height: 100%;
+    left: 50%;
+    top: 50%;
 
 }
 
@@ -26,7 +39,7 @@ img{
     
 .match-details{
     background-color: #1f79b7;
-    max-height: 300px;
+    height: 300px;
     width: 100%;
 
 }
@@ -38,9 +51,10 @@ img{
 }
 
 h1{
-   font-size: 200%;
+    font-size: 200%;
     font-weight: 400;
-    margin: 0; 
+    margin: 0;
+    text-transform: capitalize;
 }
 
 h2{
@@ -49,9 +63,8 @@ h2{
     font-weight: 100;
     letter-spacing: 3px;
     text-align: center;
-    color: aliceblue;
+    color: white;
     margin: 0;
-    text-emphasis-style: double-circle;
     padding: 5px
 
 }
