--- a/WebContent/resources/signupstyle.css
+++ b/WebContent/resources/signupstyle.css
@@ -16,11 +16,13 @@ body {
 
 
 
-body{background:#59ABE3;
+body{
+	background:#59ABE3;
 	margin:0
 }
 
-.form{width:340px;
+.form{
+	width:340px;
 	height:440px;
 	background:#e6e6e6;
 	border-radius:8px;
@@ -32,13 +34,16 @@ body{background:#59ABE3;
 	font-family:'Montserrat',sans-serif;
 	position:relative}
 
-.title{margin:10px 0;
+.title{
+	margin:10px 0;
 	padding-bottom:10px;
-	width:180px;color:#78788c;
+	width:180px;
+	color:#fff;
 	left: 60px;
 	border-bottom:3px solid #78788c}
 
-input{width:30%;
+input{
+	width:30%;
 	padding:10px;
 	box-sizing:border-box;
 	background:none;
@@ -83,8 +88,20 @@ span{margin:0 5px 0 15px}
 }
 
 .Top-Left {
-   position: relative;
+	position: relative;
     left: 60px;
     top: 60px;
     border: 3px solid #73AD21;
   }
+ 
+ /*----- HEADINGS -----*/
+h2{
+ font-size: 200%;
+ color: white;
+ } 
+
+label{
+	margn-left: 10px;
+	width: 20%;
+}
+ 
