--- a/WebContent/resources/dashboardstyle2.css
+++ b/WebContent/resources/dashboardstyle2.css
@@ -3,8 +3,9 @@ body {
 	font-family: Oswald;
 
 }
+
 nav {
-	background-color:rgba(255, 255, 255, 0.5);
+	background-color:rgba(255, 255, 255, 0.13);
 	padding: 10px;
 	display: flex;
 	justify-content:space-between;
@@ -12,126 +13,96 @@ nav {
 	margin-right: -10px;
 	margin-left: -10px;
 	margin-top: 30px;
+    
 }
+
 h1 {
-	background-color: rgba(255, 255, 255, 0.5);
+	background-color:#1c70a9;
 	width: 30%;
 	padding: 20px;
 	color: white; 
 	display: inline;
 	border-radius: 30px;
 }
+
+h3{
+    text-align: center;
+    font-size: 150%
+}
+
 button {
-	background-color:rgba(255, 255, 255, 0.0);
+	background-color:#1c70a9;
 	border-radius: 30px;
 	border: none;
 	padding: 30px;
 	color:white;
 	font-size: 15px;
+
 }
+
 button:hover {
 	background-color:  #59ABE3;
 	border-radius: 30px;
+    transition: background-color .2s;
 }
+
 i {
+    background-color:#1c70a9;
 	color: white;
 	padding: 30px;
 }
+
 i:hover {
 	background-color:  #59ABE3;
 	border-radius: 30px;
 }
+
 .dash {
 	color:white;
 	text-align: center;
 	padding: 20px;
 	background-color: rgba(255, 255, 255, 0.5);
 	border-radius: 30px;
-	margin: 20px;
+	margin: 20px;  
 }
+
 .main {
 	display: flex;
-	justify-content: space-between;
+	justify-content:center;
+    padding: 40px;
 }
+
 .main div{
-	width: 25%;
+	width: 40%;
 	color: white;
-	background-color: rgba(255, 255, 255, 0.5);
+	background-color: rgba(255, 255, 255, 0.14);
 	border-radius: 30px;
 	padding: 10px;
+    
 }
+
+.item-1, .item-2{
+    margin: 1%;
+    margin: 0 60px;
+}
+
 .item {
-	display: flex;
+	display:inline;
 	font-size: 13px;
+    
 }
-img {
+
+
+img{
 	background-color: none;
-}
-/*
-.footer {
-	text-align: center;
-	background-color: light blue;
-	height: 100px;
-	width: 100%;
+    height: 85px;
+    float: left;
+    margin: 0 10px;
 }
 
-.dash {
-	text-align: center;
-	height: 100px;
-	width: 100%;
-	border: 3px solid black;
-}
 
-.bottomDash {
-	text-align: left;
-	height: 100px;
-	width: 100%;
-	border: 3px solid black;
-}
-
-.main {
-	text-align: center;
-	margin: 0px auto;
-	padding: 60px;
-	border: 0;
-	justify-content: center;
-	width: 100%;
-	display: inline-table;
-	padding-right: 5px;
-}
-
-.item-1 {
-	margin-right: 5px;
-	float: left;
-	height: 550px;
-	width: 30%;
-	/*background-color: red;*/
-	/* border: 3px solid black;
-}
-
-.item-2 {
-	margin-right: 5px;
-	float: left;
-	height: 550px;
-	width: 30%;
-	/*background-color: blue;*/
-	/* border: 3px solid black; */
-} 
-/*
-.item-3 {
-	margin: 0;
-	float: left;
-	height: 550px;
-	width: 30%; */
-	/*background-color: green;*/
-/*	border: 3px solid black;
-}
-
-.h3 {
-	text-align: center;
-}
-
-p {
-	text-align: left;
-	margin-left: 5px;
-}*/
+p{
+    font-size: 120%;
+    height: 100px;
+    width: 90%;
+    }
