--- a/WebContent/resources/dashboardstyle2.css
+++ b/WebContent/resources/dashboardstyle2.css
@@ -27,7 +27,9 @@ h1 {
 
 h3{
     text-align: center;
-    font-size: 150%
+    font-size: 400%;
+    margin: 5px 0;
+
 }
 
 button {
@@ -36,7 +38,7 @@ button {
 	border: none;
 	padding: 30px;
 	color:white;
-	font-size: 15px;
+	font-size: 175%;
 
 }
 
@@ -77,7 +79,7 @@ i:hover {
 	color: white;
 	background-color: rgba(255, 255, 255, 0.14);
 	border-radius: 30px;
-	padding: 10px;
+	padding: 0px;
     
 }
 
@@ -89,6 +91,7 @@ i:hover {
 .item {
 	display:inline;
 	font-size: 13px;
+	padding: 0;
     
 }
 
@@ -98,11 +101,14 @@ img{
     height: 85px;
     float: left;
     margin: 0 10px;
+    padding: 0;
 }
 
 
 p{
-    font-size: 120%;
+    font-size: 200%;
     height: 100px;
-    width: 90%;
+    width: 80%;
+    margin: 10px 0;
+    padding-left: 30px;
     }
