--- a/WebContent/resources/signupstyle2.css
+++ b/WebContent/resources/signupstyle2.css
@@ -52,7 +52,7 @@ h3{
 	padding:16px 10px;
 	border-radius:6px;
 	font-size:13px;
-	/box-shadow:10px 10px 40px -14px #000;
+	/*box-shadow:10px 10px 40px -14px #000;*/
 	margin: 10px;
     
 }
