--- a/WebContent/resources/matches2style.css
+++ b/WebContent/resources/matches2style.css
@@ -23,7 +23,7 @@
 /*------------------------*/ 
 
 .match-filter {
-	margin: 30px 0;
+	margin: 0 0 20px 0;
 	letter-spacing: 1px;
 }
 
@@ -131,7 +131,7 @@ p{
     text-align: center;
 
     height: 30px;
-    border: 1px solid;
+    border: 1px solid #1f79b7;
     border-radius: 10px;
     width: auto;
 	vertical-align: middle;
